Tidy docker run script